--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -124,7 +124,7 @@
     "X=dataset.drop(['pCR (outcome)'],axis=1)\n",
     "\n",
     "\n",
-    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,stratify=y)"
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,stratify=y,random_state=1)"
    ],
    "metadata": {
     "collapsed": false
