--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -448,7 +448,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "# dataset=pd.read_excel(\"/Users/empty/PycharmProjects/ML-CW-2/Data/trainDataset.xls\")\n",
     "dataset=pd.read_excel(\"Data/trainDataset.xls\")\n",
     "dataset=dataset[dataset[\"pCR (outcome)\"]!=999]\n",
     "dataset.head(len(dataset))"
@@ -526,9 +525,8 @@
    "source": [
     "y=dataset['pCR (outcome)']\n",
     "X=dataset.drop(['pCR (outcome)','RelapseFreeSurvival (outcome)'],axis=1)\n",
-    "X=dataset[['Age','ER','PgR','HER2','TrippleNegative','ChemoGrade','Proliferation','HistologyType','LNStatus','TumourStage']]\n",
-    "global_seed=2\n",
-    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,stratify=y,random_state=global_seed)"
+    "\n",
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,stratify=y,random_state=2)"
    ]
   },
   {
@@ -718,15 +716,15 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import KBinsDiscretizer\n",
-    "datasetCopy=dataset.iloc[:,3].values.reshape(-1,1)\n",
-    "# 不能导入一维，所以reshape\n",
-    "est = KBinsDiscretizer(n_bins=3, encode='ordinal', strategy='quantile')\n",
-    "est.fit(datasetCopy)\n",
-    "Xt = est.transform(datasetCopy)\n",
-    "set(Xt.ravel())\n",
-    "dataset.iloc[:,3]=Xt\n",
-    "dataset"
+    "# from sklearn.preprocessing import KBinsDiscretizer\n",
+    "# datasetCopy=dataset.iloc[:,3].values.reshape(-1,1)\n",
+    "# # 不能导入一维，所以reshape\n",
+    "# est = KBinsDiscretizer(n_bins=3, encode='ordinal', strategy='quantile')\n",
+    "# est.fit(datasetCopy)\n",
+    "# Xt = est.transform(datasetCopy)\n",
+    "# set(Xt.ravel())\n",
+    "# dataset.iloc[:,3]=Xt\n",
+    "# dataset"
    ]
   },
   {
@@ -804,46 +802,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def is_related(pair1, pair2):\n",
-    "    if (pair1[0] in pair2 or pair1[1] in pair2) and pair1!=pair2 and not (pair1[0]==pair2[1] and pair1[1]==pair2[0]):\n",
-    "        return True\n",
-    "    return False\n",
+    "# def is_related(pair1, pair2):\n",
+    "#     if (pair1[0] in pair2 or pair1[1] in pair2) and pair1!=pair2 and not (pair1[0]==pair2[1] and pair1[1]==pair2[0]):\n",
+    "#         return True\n",
+    "#     return False\n",
     "\n",
-    "def add_relation(corr_fea):\n",
-    "    for i in range(len(corr_fea)):\n",
-    "        for j in range(i,len(corr_fea)):\n",
-    "            if i!=j:\n",
-    "                if is_related(corr_fea[i],corr_fea[j]):\n",
-    "                    fea1=tuple(set(corr_fea[i])-set(corr_fea[j]))\n",
-    "                    fea2=tuple(set(corr_fea[j])-set(corr_fea[i]))\n",
-    "                    fea=fea1+fea2\n",
-    "                    if fea not in corr_fea and rev(fea) not in corr_fea:\n",
-    "                        corr_fea.append((fea1+fea2))\n",
+    "# def add_relation(corr_fea):\n",
+    "#     for i in range(len(corr_fea)):\n",
+    "#         for j in range(i,len(corr_fea)):\n",
+    "#             if i!=j:\n",
+    "#                 if is_related(corr_fea[i],corr_fea[j]):\n",
+    "#                     fea1=tuple(set(corr_fea[i])-set(corr_fea[j]))\n",
+    "#                     fea2=tuple(set(corr_fea[j])-set(corr_fea[i]))\n",
+    "#                     fea=fea1+fea2\n",
+    "#                     if fea not in corr_fea and rev(fea) not in corr_fea:\n",
+    "#                         corr_fea.append((fea1+fea2))\n",
     "\n",
-    "def rev(fea):\n",
-    "    f1=fea[0]\n",
-    "    f2=fea[1]\n",
+    "# def rev(fea):\n",
+    "#     f1=fea[0]\n",
+    "#     f2=fea[1]\n",
     "\n",
-    "    return (f2,f1)\n",
+    "#     return (f2,f1)\n",
     "\n",
-    "corr=X_train.corr()\n",
-    "corr=corr.where(abs(corr)>0.9)\n",
-    "count=0\n",
-    "corr_fea=[]\n",
-    "for i in corr.columns:\n",
-    "    for j in corr.columns:\n",
-    "        if i!=j and abs(corr[i][j])>0.9 and ((i,j) not in corr_fea) and ((j,i) not in corr_fea):\n",
-    "            count+=1\n",
-    "            corr_fea.append((i,j))\n",
-    "            add_relation(corr_fea)\n",
-    "\n",
-    "new_num_fea=len(X_train.columns)-count"
+    "# corr=X_train.corr()\n",
+    "# corr=corr.where(abs(corr)>0.9)\n",
+    "# count=0\n",
+    "# corr_fea=[]\n",
+    "# for i in corr.columns:\n",
+    "#     for j in corr.columns:\n",
+    "#         if i!=j and abs(corr[i][j])>0.9 and ((i,j) not in corr_fea) and ((j,i) not in corr_fea):\n",
+    "#             count+=1\n",
+    "#             corr_fea.append((i,j))\n",
+    "#             add_relation(corr_fea)\n"
    ]
   },
   {
@@ -891,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,8 +907,8 @@
     "    'imputeOutlier__n_neighbors':[10,100,200],\n",
     "    'pca__n_components':[20,40,60,80],\n",
     "    'resample__smote':[SMOTE(sampling_strategy=0.6),SMOTE(sampling_strategy=0.8),\n",
-    "        SMOTE(sampling_strategy=1.0),SMOTE(sampling_strategy=1.2),\n",
-    "        SMOTE(sampling_strategy=1.4)],\n",
+    "                       SMOTE(sampling_strategy=1.0),SMOTE(sampling_strategy=1.2),\n",
+    "                       SMOTE(sampling_strategy=1.4)],\n",
     "    'rf__class_weight':['balanced'],\n",
     "    'rf__max_depth':[10,20,30],\n",
     "    'rf__max_features':[2,3,4,5],\n",
